--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1137,4 +1137,7 @@ config TOUCHSCREEN_IST30XX
 	depends on I2C
 
 source "drivers/input/touchscreen/IST30xx/Kconfig"
+
+config WAKE_GESTURES
+	bool "Wake Gestures"
 endif
