--- a/arch/arm64/configs/land_defconfig
+++ b/arch/arm64/configs/land_defconfig
@@ -499,15 +499,6 @@ CONFIG_ION_MSM=y
 CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_BUS_SCALING=y
 
-CONFIG_PRONTO_WLAN=m
-CONFIG_PRIMA_WLAN_LFR=y
-CONFIG_PRIMA_WLAN_OKC=y
-CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
-CONFIG_QCOM_TDLS=y
-CONFIG_WLAN_FEATURE_11W=y
-CONFIG_QCOM_VOWIFI_11R=y
-CONFIG_ENABLE_LINUX_REG=y
-
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
 
@@ -519,11 +510,9 @@ CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=n
-CONFIG_PSTORE_FTRACE=n
-CONFIG_PSTORE_RAM=n
+CONFIG_PSTORE_FTRACE=y
+CONFIG_PSTORE_RAM=y
 CONFIG_PSTORE_LAST_KMSG=y
-CONFIG_FUNCTION_TRACER=n
-# CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 CONFIG_QPNP_POWER_ON=y
